--- a/css/style.css
+++ b/css/style.css
@@ -166,13 +166,15 @@ header {
 
 #navbar nav a {
   display: inline-block;
-  width: 15.66667%;
+  width: 16.66667%;
   margin: 0;
   padding: 22px 0;
   text-transform: uppercase;
   color: black;
   text-align: center;
   border-right: 1px solid #ccc;
+  text-decoration: none;
+  font: 1em 'Trebuchet MS', Arial, sans-serif;
 }
 
 
