--- a/css/style.css
+++ b/css/style.css
@@ -199,13 +199,14 @@ header {
   padding: 84px 0 0;
 }
 
-
 #logo h1 {
   font-family: 'Clicker Script', cursive;
+  margin: 0;
 }
 
 #logo h2 {
-  font-family: 'Elsie Swash Caps', cursive;
+  font-family: 'Elsie Swash Caps', cursive
+  margin: 0;
 }
 
 /*////////// MAIN SECTIONS //////////*/
