--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,9 @@ section {
 
 /*////////// DETAILS //////////*/
 
-
+#details {
+  border-top: 1px solid #fff;
+}
 
 #details div {
   height: 221px;
